Fixed issue with A and B buttons not staying on the same hor axis when the screen width is too small

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,6 +92,7 @@ body {
 
   #actionButtons{
     position: relative;
+    min-width: 50px;
    width: 40vw;
    height: 40vh;
    bottom: 20vh;
